<resources>
    <string name="app_name">HUT课表助手</string>
    <string name="get_kb_button_name">获取课表</string>
    <string name="user_hint">请输入学号</string>
    <string name="passwd_hint">请输入密码</string>
    <string name="about">关于</string>

    <string name="log_output">日志输出</string>
    <string name="author_page">作者主页</string>
    <string name="choose_zhouci">请选择周次：</string>
    <string name="loading">加载中…</string>
    <string name="kb_item_string">课表item项</string>
    <string name="thanks">鸣谢</string>
    <string name="thanks_text">素材制作：RudyCrane\n 测试：victory 魏巍\n 特别鸣谢: 3B铅笔 平平无奇比奇堡刁民
    </string>
    <string name="OK">确定</string>
    <string name="under_development">正在开发</string>
    <string name="user_name">用户名</string>
    <string name="user_info">个人信息</string>
    <string name="logout">退出登录</string>
    <string name="login">登录</string>
    <string name="string_schedule">课表</string>
    <string name="string_tool">工具</string>
    <string name="string_me">我的</string>
    <string name="cache_kb">正在下载课表，请稍候…</string>
    <string name="cache_kb_placeholder">正在下载课表，请稍候…%s</string>
    <string name="clean_kb_cache">重新缓存课表</string>
    <string name="choose_API">请选择线路：</string>
    <string name="about_info" translatable="false">正式版本：v%s\nWritten by GoodBoyboy</string>
    <string name="check_update">检测更新</string>
    <string name="captcha">验证码</string>
    <string name="backbutton">backButton</string>
    <string name="close_button">closeButton</string>
    <string name="user_num">请输入账号</string>
    <string name="logout_hut_app">注销智慧工大app登录状态</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>


    <string name="program_url_addr">项目地址</string>
    <string name="author_page_url" translatable="false">https://www.goodboyboy.top</string>
    <string name="about_us">关于我们</string>
    <string name="program_url" translatable="false">https://github.com/GoodBoyboy666/HUT</string>
    <string name="setting_text">设置</string>
    <string name="bio_auth_text">请完成生物验证</string>
    <string name="open_source_notices">开放源代码许可</string>
    <string name="all_tools_text">全部工具</string>
    <string name="frequently_used_tools">常用工具</string>
    <string name="no_more_reminders">不再提醒</string>
    <string name="service_item_text">功能项</string>
    <string name="Ignore_the_version">忽略该版本</string>
</resources>