<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="设置">
        <Preference
            app:key="clean_webView_cache"
            app:title="清除缓存"
            app:summary="正在计算……"/>
    </PreferenceCategory>
    <PreferenceCategory app:title="生物解锁">
        <SwitchPreferenceCompat
            app:key="enable_bio"
            app:title="启用生物解锁"
            app:summary="开启后每次启动将会验证身份"/>
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/about">
    <Preference
        app:key="about"
        app:title="@string/about_us" />

    <Preference
        app:key="author_page"
        app:title="@string/author_page"
        app:summary="@string/author_page_url" />

    <Preference
        app:key="check_new"
        app:title="@string/check_update" />

    <Preference
        app:key="Github"
        app:title="@string/program_url_addr"
        app:summary="@string/program_url" />
    <Preference
        app:key="OpenSourceLicense"
        app:title="@string/open_source_notices"/>
    </PreferenceCategory>

</PreferenceScreen>