<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- 用户头像 -->
        <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher" />

        <!-- 用户名 -->
        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/user_name"
            android:textSize="20sp"
            android:lineSpacingExtra="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="8dp"/>

        <!-- 个人信息 -->
        <TextView
            android:id="@+id/user_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/user_info"
            android:textSize="16sp"
            android:lineSpacingExtra="5dp"
            android:paddingTop="4dp" />

        <!-- 功能菜单 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/settings_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_text"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/me_button_clean_cache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clean_kb_cache"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_margin="10dp"/>
            <Button
                android:id="@+id/me_button_logout_hut_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout_hut_app"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_margin="10dp"/>
            <Button
                android:id="@+id/me_button_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_margin="10dp"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>